--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>dev.ikm.build</groupId>
         <artifactId>java-parent</artifactId>
-        <version>1.50.0</version>
+        <version>1.55.0</version>
         <relativePath />
     </parent>
 
-    <groupId>dev.ikm.tinkar</groupId>
-    <artifactId>tinkar-schema</artifactId>
+    <groupId>dev.ikm.test.env</groupId>
+    <artifactId>tinkar-schema-test-env-repo</artifactId>
     <version>1.37.0-SNAPSHOT</version>
 
     <name>Tinkar Schema: Java</name>
