--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <relativePath />
     </parent>
 
-    <groupId>dev.ikm.test.env</groupId>
+    <groupId>dev.ikm.test-env</groupId>
     <artifactId>tinkar-schema-test-env-repo</artifactId>
     <version>1.37.0-SNAPSHOT</version>
 
