--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,15 +15,18 @@ jobs:
     name: Build Job
     runs-on: ubuntu-24.04
     steps:
+      - name: Pull Request Version Validation
+        if: github.event_name == 'pull_request'
+        uses: ikmdev/maven-pull-request-version-validation-action@main
+
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        
       - uses: actions/setup-java@v4
         with:
             java-version: '21'
             distribution: 'zulu'
-
-      - name: Checkout Code
-        uses: actions/checkout@v4
-       
-      
+        
       - name: Build Protoc Docker container
         uses: docker/build-push-action@v6
         with:
@@ -41,17 +44,8 @@ jobs:
           ls src/main/java-generated
 
       - name: Build IKMDEV Code
-        if: github.event.repository.name != 'github_actions_test'
         uses: ikmdev/maven-clean-install-build-action@main
         with:
           branch_name: ${{env.BRANCH_NAME}}
-          sonarcloud_token: ${{ secrets.SONAR_TOKEN }}
-          sonarcloud_host_url: ${{ 'https://sonarcloud.io/' }}
-          sonarcloud_organization: ${{ github.repository_owner }}
-          sonarcloud_sources: ${{ 'src/main/java' }}
-          sonarcloud_projectKey: ${{ github.repository_owner }}_${{ github.event.repository.name }}
-          sonarcloud_coverage_jacoco_xmlReportPaths: ${{ 'target/site/jacoco/jacoco.xml' }}
-          sonarcloud_java_binaries: ${{ 'target/classes' }}
-          sonarcloud_tests: ${{ 'src/test/java' }}
 
     
