--- a/.github/workflows/post_build.yaml
+++ b/.github/workflows/post_build.yaml
@@ -51,4 +51,5 @@ jobs:
             gpg_key: ${{secrets.GPG_KEY}}
             gpg_passphrase: ${{secrets.GPG_PASSPHRASE}}
             sonarcloud_token: ${{ secrets.SONAR_TOKEN }}
+            sonarcloud_sources: src/main/java-generated
             sonarcloud_tests: ""
