--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>dev.ikm.test-env</groupId>
     <artifactId>tinkar-schema-test-env-repo</artifactId>
-    <version>1.39.0-SNAPSHOT</version>
+    <version>1.39.0</version>
 
     <name>Tinkar Schema: Java</name>
     <url>https://github.com/IKM/tinkar-proto</url>
