--- a/.github/workflows/post_build.yaml
+++ b/.github/workflows/post_build.yaml
@@ -52,4 +52,4 @@ jobs:
             gpg_passphrase: ${{secrets.GPG_PASSPHRASE}}
             sonarcloud_token: ${{ secrets.SONAR_TOKEN }}
             sonarcloud_sources: 'src/main/java-generated'
-            sonarcloud_tests: ${{ '' }}
+            # sonarcloud_tests: ${{ '' }}
